type chart pokemon toggle

--- a/src/app/matchup-overview/matchup/speedchart/speedchart.component.html
+++ b/src/app/matchup-overview/matchup/speedchart/speedchart.component.html
@@ -59,7 +59,7 @@
           [pokemon]="{ pid: 'roaringmoon' }"
           [flipped]="true"
         ></sprite>
-        <div class="px-1 text-lg">{{ tier.name }}</div>
+        <div class="px-1 text-lg">{{ tier.pokemon.pid }}</div>
         <div class="flex justify-end flex-grow ml-auto">
           <div class="flex h-5 space-x-1">
             <div *ngIf="tier.modifiers.includes('max+')" class="flex space-x-1">
