Added name to pokemon data type

--- a/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
+++ b/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
@@ -37,7 +37,7 @@
       <sprite
         class="h-8"
         *ngFor="let pokemon of move.pokemon"
-        [pokemon]="{ pid: pokemon }"
+        [pokemon]="{ pid: pokemon, name: pokemon }"
       ></sprite>
     </div>
   </div>
