--- a/src/app/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon-form/pokemon-form.component.html
@@ -4,6 +4,7 @@
       class="w-24 h-24"
       [pokemon]="{
         pid: pokemonForm.value.pokemonName,
+        name: pokemonForm.value.pokemonName,
         shiny: pokemonForm.value.shiny
       }"
     ></sprite>
