Send new draft working

--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -75,7 +75,7 @@
 </div>
 <button
   [routerLink]="'/draft/new'"
-  class="p-2 m-3 rounded-full shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
+  class="p-2 m-3 rounded-lg shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
 >
   Add League
 </button>
