--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -8,7 +8,7 @@
       (click)="select(result)"
       class="px-4 py-2 cursor-pointer hover:bg-gray-100"
     >
-      {{ result }}
+      {{ result.name }}
     </div>
   </div>
 </div>
