add draft working

--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -8,17 +8,17 @@
       <div class="p-2 shadow-md bg-cyan-300 rounded-xl">
         <div class="flex w-full">
           <div
-            class="w-3/5 p-1 mx-1 text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600"
+            class="w-3/5 p-1 mx-1 font-semibold text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600"
           >
             {{ team.leagueName }}
           </div>
           <div
-            class="w-1/5 p-1 text-xs text-center rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600"
+            class="w-1/5 p-1 text-xs font-semibold text-center rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600"
           >
             {{ team.ruleset }}
           </div>
           <div
-            class="w-1/5 p-1 mx-1 text-xs text-center rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600"
+            class="w-1/5 p-1 mx-1 text-xs font-semibold text-center rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600"
           >
             {{ team.format }}
           </div>
