--- a/src/app/draft-overview/draft-form/draft-form.component.html
+++ b/src/app/draft-overview/draft-form/draft-form.component.html
@@ -66,6 +66,7 @@
       </ol>
     </ul>
     <button
+      type="button"
       (click)="addNewPokemon()"
       class="px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600"
     >
@@ -79,4 +80,4 @@
     Submit
   </button>
 </form>
-{{ draftForm.value | json }}
+<!-- {{ draftForm.value | json }} -->
