--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -16,7 +16,7 @@
   <div class="bg-red-100 w-[92.5%] rounded-xl p-2 border-2 border-red-200">
     <div>
       <button
-        class="p-2 m-3 bg-red-300 rounded-full shadow-md hover:shadow shadow-red-600"
+        class="p-2 m-3 bg-red-300 rounded-lg shadow-md hover:shadow shadow-red-600"
       >
         <a [routerLink]="'new'"> Add Team </a>
       </button>
@@ -29,17 +29,17 @@
             <div class="p-2 bg-red-300 shadow-md rounded-xl">
               <div class="flex w-full h-fit">
                 <div
-                  class="w-3/5 h-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
+                  class="w-3/5 h-full p-1 mx-1 font-semibold text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
                 >
                   {{ matchup.bTeam.teamName }}
                 </div>
                 <div
-                  class="w-1/5 h-full p-1 text-xs text-center bg-red-200 rounded-full shadow-inner shadow-red-600"
+                  class="w-1/5 h-full p-1 text-xs font-semibold text-center bg-red-200 rounded-full shadow-inner shadow-red-600"
                 >
                   {{ score(matchup.score) }}
                 </div>
                 <div
-                  class="w-1/5 h-full p-1 mx-1 text-xs text-center bg-red-200 rounded-full shadow-inner shadow-red-600"
+                  class="w-1/5 h-full p-1 mx-1 text-xs font-semibold text-center bg-red-200 rounded-full shadow-inner shadow-red-600"
                 >
                   {{ matchup.stage }}
                 </div>
