--- a/src/app/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
@@ -6,78 +6,7 @@
     Cancel
   </button>
   <div>
-    <p class="text-3xl bold">{{ title }}</p>
+    <p class="text-3xl bold">New League</p>
   </div>
 </div>
-<form
-  [formGroup]="draftForm"
-  (ngSubmit)="onSubmit()"
-  class="p-2 m-2 space-y-3 shadow-md team bg-cyan-300 hover:shadow-md shadow-cyan-600 rounded-xl"
->
-  <div class="w-full">
-    <div class="grid grid-cols-4 gap-4">
-      <div>
-        <label class="block mb-1 font-bold">League Name</label>
-        <input
-          formControlName="leagueName"
-          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
-        />
-      </div>
-      <div>
-        <label class="block mb-1 font-bold">Team Name</label>
-        <input
-          formControlName="teamName"
-          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
-        />
-      </div>
-      <div>
-        <label class="block mb-1 font-bold">Format</label>
-        <select
-          formControlName="format"
-          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
-        >
-          <option *ngFor="let format of formats" value="{{ format }}">
-            {{ format }}
-          </option>
-        </select>
-      </div>
-      <div>
-        <label class="block mb-1 font-bold">Ruleset</label>
-        <select
-          formControlName="ruleset"
-          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
-        >
-          <option *ngFor="let ruleset of rulesets" value="{{ ruleset }}">
-            {{ ruleset }}
-          </option>
-        </select>
-      </div>
-    </div>
-  </div>
-  <div class="p-2 border-2 border-cyan-200 rounded-xl">
-    <ul>
-      <ol *ngFor="let pokemonForm of teamArray.controls; let i = index">
-        <pokemon-form
-          [pokemonForm]="$any(pokemonForm)"
-          [formIndex]="i"
-          (deletePokemonEvent)="deletePokemon($event)"
-          (addPokemonEvent)="addNewPokemon(i, $event)"
-        ></pokemon-form>
-      </ol>
-    </ul>
-    <button
-      type="button"
-      (click)="addNewPokemon()"
-      class="px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600"
-    >
-      Add
-    </button>
-  </div>
-  <button
-    type="submit"
-    class="w-1/6 px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600"
-  >
-    Submit
-  </button>
-</form>
-<!-- {{ draftForm.value | json }} -->
+<draft-form-core [draftForm]="draftForm"></draft-form-core>
