--- a/src/app/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/matchup-overview/matchup/movechart/movechart.component.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 <div
-  class="overflow-auto border-4 max-h-128 w-128 border-slate-400 bg-slate-400"
+  class="w-full h-full overflow-y-auto border-4 border-slate-400 bg-slate-400"
 >
   <move-category
     *ngFor="let category of this.teams[selectedTeam]"
