--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -1,6 +1,6 @@
 <div class="bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
   <div class="flex px-2 pt-2">
-    <div class="w-1/2">
+    <div class="w-1/4">
       <button
         routerLink="/draft/{{ leagueId }}"
         class="px-3 py-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
@@ -8,15 +8,21 @@
         Back
       </button>
     </div>
-    <div class="flex justify-end w-1/2">
-      <div class="flex justify-end w-1/2">
+    <div class="w-1/2 flex justify-center">
+      <div>
+      League Name
+      </div>
+      <div>Stage</div>
+      <div>Format</div>
+      <div>Ruleset</div>
+    </div>
+    <div class="flex justify-end w-1/4">
         <button
           class="px-3 py-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
           (click)="share()"
         >
           Share
         </button>
-      </div>
     </div>
   </div>
   <div
