--- a/src/app/matchup-overview/matchup/matchup.component.html
+++ b/src/app/matchup-overview/matchup/matchup.component.html
@@ -1,8 +1,7 @@
 <div class="flex flex-wrap justify-center gap-4 p-4 text-xs">
-  <overview class="z-10" [teams]="summery"></overview>
+  <overview class="z-10" [teams]="overview"></overview>
   <summery class="z-10" [teams]="summery"></summery>
   <speedchart class="z-10" [speedchart]="speedChart"></speedchart>
-
   <typechart class="z-10" [typecharts]="typeChart"></typechart>
   <movechart class="z-10 h-128" [teams]="moveChart"></movechart>
   <coveragechart
