--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -1,7 +1,7 @@
 <form
   [formGroup]="draftForm"
   (ngSubmit)="onSubmit()"
-  class="p-2 m-2 space-y-3 shadow-md team bg-cyan-300 hover:shadow-md shadow-cyan-600 rounded-xl"
+  class="p-2 m-2 space-y-3 shadow-md team bg-cyan-300  shadow-cyan-600 rounded-xl"
 >
   <div class="w-full">
     <div class="grid grid-cols-4 gap-4">
@@ -43,30 +43,37 @@
       </div>
     </div>
   </div>
-  <div class="p-2 border-2 border-cyan-200 rounded-xl">
-    <ul>
-      <ol *ngFor="let pokemonForm of teamArray.controls; let i = index">
-        <pokemon-form
-          [pokemonForm]="$any(pokemonForm)"
-          [formIndex]="i"
-          (deletePokemonEvent)="deletePokemon($event)"
-          (addPokemonEvent)="addNewPokemon(i, $event)"
-        ></pokemon-form>
-      </ol>
-    </ul>
-    <button
-      type="button"
-      (click)="addNewPokemon()"
-      class="px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600"
-    >
-      Add
-    </button>
+  <div class="p-2 border-2 border-cyan-200 rounded-xl ">
+    <div class="grid gap-x-4 md:grid-cols-1 lg:grid-cols-2">
+      <pokemon-form
+        *ngFor="let pokemonForm of teamArray.controls; let i = index"
+        [pokemonForm]="$any(pokemonForm)"
+        class="w-full"
+        [formIndex]="i"
+        (deletePokemonEvent)="deletePokemon($event)"
+        (addPokemonEvent)="addNewPokemon(i, $event)"
+      ></pokemon-form>
+    </div>
+  
+   
+    <div class="w-full flex justify-center">
+      <button
+        type="button"
+        (click)="addNewPokemon()"
+        class="px-1 w-1/6 my-3 font-bold rounded-full shadow bg-slate-300 hover:bg-slate-200 shadow-slate-600"
+      >
+        Add Pokemon
+      </button>
+    </div>
   </div>
-  <button
-    type="submit"
-    class="w-1/6 px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600"
-  >
-    Submit
-  </button>
+  <div class="w-full flex justify-end">
+    <button
+      type="submit"
+      class="w-1/5 mx-4 p-1 text-xl font-bold rounded-full shadow bg-slate-300 hover:bg-slate-200 shadow-slate-600"
+    >
+      Submit
+    </button>
+</div>
+
 </form>
-{{ draftForm.value | json }}
+<!-- {{ draftForm.value | json }} -->
