--- a/src/app/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
@@ -1,12 +1,12 @@
-<div class="flex">
+<div class="flex items-center space-x-4">
   <button
     [routerLink]="'/draft/'"
-    class="p-2 m-3 rounded-full shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
+    class="p-2 m-3 rounded-lg shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
   >
     Cancel
   </button>
   <div>
-    <p class="text-3xl bold">New League</p>
+    <p class="text-3xl font-bold">New League</p>
   </div>
 </div>
 <draft-form-core [draftForm]="draftForm"></draft-form-core>
