--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,35 @@
 <div class="flex flex-col justify-between h-screen">
   <header class="z-10 flex w-full border-b-2 bg-slate-300 border-slate-400">
-    <a class="p-2 text-xl" routerLink="/">DraftZone</a>
-    <div class="flex px-10 py-2 space-x-6">
-      <a routerLink="/draft">Draft</a>
-      <a class="opacity-50">Planner</a>
-      <a class="opacity-50">Statistics</a>
+    <div class="flex items-center justify-center w-32 hover:bg-slate-200">
+      <a class="text-xl" routerLink="/">DraftZone</a>
+    </div>
+    <div class="flex">
+      <div class="flex items-center h-full px-3 hover:bg-slate-200">
+        <a routerLink="/draft">Draft</a>
+      </div>
+      <div class="flex items-center h-full px-3 hover:bg-slate-200">
+        <a class="opacity-50">Planner</a>
+      </div>
+      <div class="flex items-center h-full px-3 hover:bg-slate-200">
+        <a class="opacity-50">Statistics</a>
+      </div>
     </div>
     <div class="flex justify-end flex-grow p-2">
       <div class="px-4">
         <ng-container *ngIf="auth.isAuthenticated() | async; else loggedOut">
-          <div *ngIf="auth.user() | async as user" class="flex h-8" (click) = "userDropdown = !userDropdown">
-            <div class="space-x-2 flex h-full items-center">
-              <img
-              src="{{ user.picture }}"
-              class="h-full rounded-full"
-              />
+          <div
+            *ngIf="auth.user() | async as user"
+            class="flex h-8"
+            (click)="userDropdown = !userDropdown"
+          >
+            <div class="flex items-center h-full space-x-2">
+              <img src="{{ user.picture }}" class="h-full rounded-full" />
               <div>{{ user.name }}</div>
-              
             </div>
           </div>
           <div *ngIf="userDropdown" class="">
             <button (click)="auth.logout()">Log out</button>
-          </div> 
+          </div>
         </ng-container>
 
         <ng-template #loggedOut>
