--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,17 +1,18 @@
 <div class="flex flex-col items-center w-full h-full px-6 py-8">
-  <div class="flex items-center mb-6 text-4xl font-semibold h-1/3">
-    <img class="w-8 h-8 mr-2" src="../../../13luken.ico" alt="logo" />
+  <div class="flex items-center mb-6 text-6xl font-semibold h-1/3">
+    <img class="w-16 h-16 mr-2" src="../../../13luken.ico" alt="logo" />
     Pokemon DraftZone
   </div>
-  <div class="bg-slate-300 rounded-lg shadow p-4 w-2/3 h-1/2 overflow-y-auto">
-    <h1 class="font-bold text-xl pb-2">News</h1>
+  <div class="w-2/3 p-4 overflow-y-auto rounded-lg shadow bg-slate-300 h-1/2">
+    <h1 class="pb-2 text-xl font-bold">News</h1>
     <div>
-      <h2 class="font-semibold text-lg">      February 28, 2024      </h2>
+      <h2 class="text-lg font-semibold">February 28, 2024</h2>
       <h3>
-        Welcome Pokemon Draftzone!
-
-        I am thrilled to announce the launch of our beta testing phase! Explore the site, share feedback, and report any bugs you encounter to our
-        <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500">Discord</a>. Lets work together to create the ultimate Pokemon Draft experience. 
+        Welcome Pokemon Draftzone! I am thrilled to announce the launch of our
+        beta testing phase! Explore the site, share feedback, and report any
+        bugs you encounter to our
+        <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500">Discord</a
+        >. Lets work together to create the ultimate Pokemon Draft experience.
       </h3>
     </div>
   </div>
