other cosmetic changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="flex">
       <div class="flex items-center h-full px-3 hover:bg-slate-200">
-        <a routerLink="/draft">Draft</a>
+        <a routerLink="/draft">Drafts</a>
       </div>
       <div class="flex items-center h-full px-3 hover:bg-slate-200">
         <a class="opacity-50">Planner</a>
