--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -1,7 +1,7 @@
 <form
   [formGroup]="draftForm"
   (ngSubmit)="onSubmit()"
-  class="p-2 m-2 space-y-3 shadow-md team bg-cyan-300  shadow-cyan-600 rounded-xl"
+  class="p-2 m-2 space-y-3 shadow-md team bg-cyan-300 shadow-cyan-600 rounded-xl"
 >
   <div class="w-full">
     <div class="grid grid-cols-4 gap-4">
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-  <div class="p-2 border-2 border-cyan-200 rounded-xl ">
+  <div class="p-2 border-2 border-cyan-200 rounded-xl">
     <div class="grid gap-x-4 md:grid-cols-1 lg:grid-cols-2">
       <pokemon-form
         *ngFor="let pokemonForm of teamArray.controls; let i = index"
@@ -54,26 +54,24 @@
         (addPokemonEvent)="addNewPokemon(i, $event)"
       ></pokemon-form>
     </div>
-  
-   
-    <div class="w-full flex justify-center">
+
+    <div class="flex justify-center w-full">
       <button
         type="button"
         (click)="addNewPokemon()"
-        class="px-1 w-1/6 my-3 font-bold rounded-full shadow bg-slate-300 hover:bg-slate-200 shadow-slate-600"
+        class="w-1/6 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
       >
         Add Pokemon
       </button>
     </div>
   </div>
-  <div class="w-full flex justify-end">
+  <div class="flex justify-end w-full">
     <button
       type="submit"
-      class="w-1/5 mx-4 p-1 text-xl font-bold rounded-full shadow bg-slate-300 hover:bg-slate-200 shadow-slate-600"
+      class="w-1/5 p-1 mx-4 text-xl font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
     >
       Submit
     </button>
-</div>
-
+  </div>
 </form>
 <!-- {{ draftForm.value | json }} -->
