--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -1,4 +1,6 @@
-<p class="text-3xl bold" *ngIf="teams">Drafts</p>
+<div class="flex items-center px-6 py-1">
+  <p class="text-3xl font-bold">Drafts</p>
+</div>
 <div
   id="teams"
   class="grid h-auto grid-flow-row grid-cols-1 overflow-auto md:grid-cols-2 lg:grid-cols-3"
@@ -41,13 +43,13 @@
           >Matches</a
         >
         <a
-          class="m-2 text-center shadow w-1/6 bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-1/6 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
           [routerLink]="'edit'"
           [queryParams]="{ draft: team.leagueId | json }"
           >Edit
         </a>
         <a
-          class="m-2 text-center shadow w-1/6 bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
+          class="w-1/6 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
           (click)="archiveConfirm = true"
           >Archive
         </a>
