--- a/src/app/opponent-overview/opponent-overview.component.html
+++ b/src/app/opponent-overview/opponent-overview.component.html
@@ -7,7 +7,7 @@
       >
         Back
       </button>
-      <div class="">
+      <div *ngIf="draft">
         <h1 class="text-3xl font-bold text-gray-800">{{ draft.leagueName }}</h1>
         <h2 class="text-2xl font-bold text-gray-600">
           {{ draft.score.wins }} - {{ draft.score.loses }} |
