--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -8,21 +8,21 @@
         Back
       </button>
     </div>
-    <div class="w-1/2 flex justify-center">
-      <div>
-      League Name
-      </div>
-      <div>Stage</div>
-      <div>Format</div>
-      <div>Ruleset</div>
+    <div class="flex justify-center w-1/2">
+      <!-- <div *ngIf="matchup">
+        <div>League Name</div>
+      <div>{{ matchup.stage }}</div>
+      <div>{{ matchup.format }}</div>
+      <div>{{ matchup.stage }}</div>
+      </div> -->
     </div>
     <div class="flex justify-end w-1/4">
-        <button
-          class="px-3 py-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
-          (click)="share()"
-        >
-          Share
-        </button>
+      <button
+        class="px-3 py-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
+        (click)="share()"
+      >
+        Share
+      </button>
     </div>
   </div>
   <div
