--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -53,9 +53,7 @@
             </div>
             <div class="flex" *ngIf="!deleteConfirm">
               <a
-                class="w-1/6 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
-                [routerLink]="'score'"
-                [queryParams]="{ matchup: matchup._id | json }"
+                class="w-1/6 m-2 text-center bg-red-300 shadow opacity-50 hover:shadow shadow-red-600 rounded-xl"
                 >Score</a
               >
               <a
@@ -65,13 +63,13 @@
                 >Prep</a
               >
               <a
-                class="m-2 text-center bg-red-300 shadow w-1/6 hover:shadow shadow-red-600 rounded-xl"
+                class="w-1/6 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
                 [routerLink]="'edit'"
                 [queryParams]="{ matchup: matchup._id | json }"
                 >Edit
               </a>
               <a
-                class="m-2 text-center bg-red-300 shadow w-1/6 hover:shadow shadow-red-600 rounded-xl"
+                class="w-1/6 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
                 (click)="deleteConfirm = true"
                 >Delete
               </a>
