--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -33,7 +33,7 @@
       <h1 class="text-3xl font-bold">Share your matchup</h1>
       <div class="flex items-center max-w-full mt-4">
         <div class="overflow-x-auto">
-          http://localhost:4200/matchup/65cc0e63130aafe30691da54
+          {{ shareUrl }}
         </div>
         <button
           class="px-3 py-2 ml-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
