typechart border improvements and min/max on summery

--- a/src/app/matchup-overview/matchup/summery/summery.component.html
+++ b/src/app/matchup-overview/matchup/summery/summery.component.html
@@ -187,6 +187,8 @@
         <input
           type="number"
           [(ngModel)]="baseValue"
+          min="20"
+          max="140"
           value="{{ baseValue }}"
           class="w-8 bg-transparent"
         />
